# MantrAI

./: .gitignore  CHECKLIST.md  README.md  mempalace.yaml  pyproject.toml
.mempalace/: config.json
docs/: PRODUCTION_READINESS_REPORT.md  PROJECT_REPORT.md  demo.py
mantrai/antifunnel/: gate.py  session.py
mantrai/cli/: main.py
mantrai/core/: agent_setup.py  config.py  detector.py  mantra.py  schema.py  selector.py
mantrai/mantras/: default.md
mantrai/mcp_server/: server.py
mantrai/mempalace_bridge/: bridge.py
mantrai/mempalace_plugin/: __init__.py
mantrai/session/: gate.py  injector.py  tracker.py
mantrai/web/: server.py
mantras/: default.md
tests/: test-mantrai-v2.sh  test-mantrai.sh  test_antifunnel.py  test_cli.py  test_core.py  test_fix_stress.py  test_mcp_server.py  test_mempalace_bridge.py  test_production_vectors.py  test_selector.py
