[project]
name = "mantrai"
version = "2.0.0"
description = "MantrAI — Self-reinforcing agent instruction primitive"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.0",
    "click>=8.0",
    "questionary>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
mantrai = "mantrai.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mantrai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
